--- a/css/contatti.css
+++ b/css/contatti.css
@@ -9,6 +9,7 @@
     text-align: center;
     font-size: 2.8em;
     margin-bottom: 50px;
+    margin-top: -40px !important;
     opacity: 0;
     transform: translateY(20px);
     animation: titleReveal 1s ease forwards;
