--- a/css/lavora.css
+++ b/css/lavora.css
@@ -4,7 +4,7 @@
     margin: 60px auto;
     padding: 40px;
     padding-bottom: 40px;
-    background-color: #E74C3C;
+    background-color: #34495e;
     color: #000;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -77,7 +77,7 @@
 .lavora-section input:focus,
 .lavora-section textarea:focus {
     outline: none;
-    box-shadow: 0 0 0 3px rgba(231, 76, 60, 0.5);
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.5);
     transform: scale(1.02);
 }
 
